components/plotting-service/base/plotting-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plotting-service
  namespace: fia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: plotting-service
  template:
    metadata:
      labels:
        app: plotting-service
    spec:
      containers:
        - name: plotting-service
          image: ghcr.io/fiaisis/plotting-service@sha256:873fd6d3d2b6dfe6e3b5bf2e3fc306ceef86c61dc572685762f5d4c43d61d937
          ports:
            - name: api-port
              protocol: TCP
              containerPort: 80
          volumeMounts:
            - name: cephfs-mount
              mountPath: /ceph
            - name: imat-mount
              mountPath: /imat
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: cephfs-mount
          persistentVolumeClaim:
            claimName: plotting-service-ceph-pvc
        - name: imat-mount
          csi:
            driver: smb.csi.k8s.io
            volumeAttributes:
              source: "//smb-bridge-imat.fia.svc.cluster.local/imat"
              secretName: "smb-bridge-imat"
              secretNamespace: "fia"
              mountOptions: "vers=3.0,nodfs,ro"
            nodePublishSecretRef:
              name: smb-bridge-imat
