components/plotting-service/base/plotting-service-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plotting-service-service
  namespace: fia
spec:
  selector:
    app: plotting-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
