components/plotting-service/base/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plotting-service
  namespace: fia
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https-main
  hostnames:
    - "localhost"
  rules:
  # RULE 1: Specific match for SSE streams (Infinite Timeout)
  - matches:
    - path:
        type: PathPrefix
        value: /plottingapi
      headers:
        - type: Exact
          name: Accept
          value: text/event-stream
    timeouts:
      request: 0s  # Disables the 15-second Envoy drop
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: plotting-service-service
      port: 80
      weight: 1

  # RULE 2: Standard API Catch-all (Default 15s Timeout)
  - matches:
    - path:
        type: PathPrefix
        value: /plottingapi
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: plotting-service-service
      port: 80
      weight: 1
